[gd_scene load_steps=11 format=3 uid="uid://2baad3dralel"]

[ext_resource type="Script" path="res://scripts/test.gd" id="1_efo0b"]
[ext_resource type="Texture2D" uid="uid://cf2hwlpab36x1" path="res://images/backgrounds/bglvl1.png" id="2_xba88"]
[ext_resource type="AudioStream" uid="uid://b4v7rmu1knjnc" path="res://audios/danger-situation-sound-effect-15635.mp3" id="3_8tjuc"]
[ext_resource type="PackedScene" uid="uid://i4misnd337pc" path="res://scenes/ships/ship.tscn" id="4_r4fus"]
[ext_resource type="PackedScene" uid="uid://rxqnfqeqvu7g" path="res://scenes/in_game_items/interaction_manager.tscn" id="5_08th6"]
[ext_resource type="PackedScene" uid="uid://drhmh4j1pappx" path="res://scenes/in_game_items/boosters_manager.tscn" id="6_mufce"]
[ext_resource type="PackedScene" uid="uid://df60qnjmhwiiv" path="res://scenes/in_game_items/life_steal_manager.tscn" id="7_j6lkc"]
[ext_resource type="PackedScene" uid="uid://dx6i6ol78mnea" path="res://scenes/in_game_items/regeneration_manager.tscn" id="8_fjwed"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7r7pm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr0y1"]
bg_color = Color(0.160784, 0.0823529, 0.854902, 1)

[node name="Test" type="Node2D" groups=["Mundo", "Shoots"]]
script = ExtResource("1_efo0b")

[node name="Lvl1Background" type="Sprite2D" parent="."]
position = Vector2(640, -770)
texture = ExtResource("2_xba88")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 1280.0
offset_bottom = 27.0
scale = Vector2(1, 0.56)
theme_override_styles/background = SubResource("StyleBoxFlat_7r7pm")
theme_override_styles/fill = SubResource("StyleBoxFlat_qr0y1")
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AudioBackGround" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8tjuc")

[node name="Ship" parent="." instance=ExtResource("4_r4fus")]
position = Vector2(640, 600)
rotation = -1.5708

[node name="CosmicChimeraSpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AbilityIconsContainer" type="BoxContainer" parent="."]
offset_left = 72.0
offset_top = 598.0
offset_right = 112.0
offset_bottom = 638.0

[node name="InteractionManager" parent="." instance=ExtResource("5_08th6")]

[node name="BoostersManager" parent="." instance=ExtResource("6_mufce")]

[node name="LifeStealManager" parent="." instance=ExtResource("7_j6lkc")]

[node name="RegenerationManager" parent="." instance=ExtResource("8_fjwed")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CosmicChimeraSpawn" to="." method="_on_cosmic_chimera_spawn_timeout"]
